--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "YelpCamp",
+  "name": "beckend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Zomato Beckend",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
